# ormar-casbin-adapter

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
ormar_casbin_adapter/: __init__.py  adapter.py
tests/: conftest.py  database.py  test_adapter.py
